Fix: Attempting to fix overflow on projects page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,7 +133,7 @@ main {
     overflow: hidden;
   }
   &#projects {
-    overflow-x: hidden;
+    // overflow-x: hidden;
   }
   &#contact {
     display: block;
